og image and url

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/sansnosabe/buscador-peliculas/main/src/assets/ogimage.png" />
+		<meta property="og:url" content="https://buscador-peliculas-nine.vercel.app/" />
 		<link rel="icon" type="image/svg+xml" href="/movie.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Buscador de peliculas</title>
